# xfile_context

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  CLAUDE.md  LICENSE  README.md  THIRD_PARTY_LICENSES.txt  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml  task.yml
.github/workflows/: comprehensive-tests.yml  lightweight-checks.yml
docs/: claude_workflows.md  complexity_reduction_review.md  design_decisions.md  dev_experience.md  existing_tools_analysis.md  persona_analysis.md  persona_analysis_v2.md  prd.md  prd_edge_cases.md  prd_open_questions.md  prd_testing.md  tdd.md  tdd_review_report.md
retrospective_analysis/: README.md  README_PRD.md  baseline_analysis.md  generalized_solutions.md  new_analysis.md  ping_pong_analysis.md  sample_analysis_report.md  session_analyzer.py
scripts/: analyze_metrics.py  benchmark_analysis.py  check_licenses.py  setup_branch_protection.sh
src/xfile_context/: __init__.py  __main__.py  cache.py  config.py  dev_server.py  file_watcher.py  graph_updater.py  injection_logger.py  log_config.py  logging_setup.py  mcp_server.py  metrics_collector.py  models.py  pytest_config_parser.py  query_api.py  relationship_builder.py  service.py  staleness_resolver.py  storage.py  symbol_cache.py  warning_formatter.py  warning_logger.py  warning_suppression.py
src/xfile_context.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/xfile_context/analyzers/: __init__.py  python_analyzer.py
src/xfile_context/detectors/: __init__.py  base.py  class_inheritance_detector.py  conditional_import_detector.py  decorator_detector.py  dynamic_dispatch_detector.py  dynamic_pattern_detector.py  exec_eval_detector.py  function_call_detector.py  function_definition_detector.py  import_detector.py  metaclass_detector.py  monkey_patching_detector.py  registry.py  wildcard_import_detector.py
tests/: __init__.py  test_analyze_metrics.py  test_cache.py  test_class_inheritance_detector.py  test_conditional_import_detector.py  test_config.py  test_detectors.py  test_dynamic_pattern_detectors.py  test_file_symbol_data.py  test_file_watcher.py  test_function_call_detector.py  test_function_definition_detector.py  test_graph_updater.py  test_import_detector.py  test_injection_logger.py  test_logging_setup.py  test_mcp_server.py  test_metrics_collector.py  test_models.py  test_performance.py  test_placeholder.py  test_pytest_config_parser.py  test_python_analyzer.py  test_query_api.py  test_relationship_builder.py  test_service.py  test_staleness_resolver.py  test_storage.py  test_symbol_cache.py  test_validation_errors.py  test_warning_formatter.py  test_warning_logger.py  test_warning_suppression.py  test_wildcard_import_detector.py
tests/functional/: __init__.py  test_context_injection.py  test_cross_file_awareness.py  test_dynamic_python_handling.py  test_injection_logging.py  test_relationship_detection.py  test_session_metrics.py  test_working_memory_cache.py
tests/functional/test_codebase/: README.md  __init__.py  ground_truth.json
tests/functional/test_codebase/api/: __init__.py  endpoints.py  middleware.py
tests/functional/test_codebase/config/: __init__.py  constants.py  settings.py
tests/functional/test_codebase/core/: __init__.py
tests/functional/test_codebase/core/models/: __init__.py  base.py  order.py  product.py  user.py
tests/functional/test_codebase/core/services/: __init__.py  base_service.py  notification_service.py  order_service.py  product_service.py  user_service.py
tests/functional/test_codebase/core/utils/: __init__.py  formatting.py  helpers.py  validation.py
tests/functional/test_codebase/data/: __init__.py  in_memory_store.py  repository.py
tests/functional/test_codebase/edge_cases/: __init__.py
tests/functional/test_codebase/edge_cases/context_injection/: __init__.py  ec11_stale_cache.py  (+4 more)
tests/integration/: __init__.py  conftest.py  test_analyzer_detectors.py  test_filewatcher_analyzer.py  test_mcp_server_service.py  test_service_store_cache.py  test_staleness_resolution.py  test_two_phase_analysis.py
(+20 files in other folders)
