# Copyright (c) 2025 Henru Wang
# All rights reserved.

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xfile-context"
version = "0.0.82"
description = "Cross-File Context Links MCP Server"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [
    {name = "Henru Wang", email = "noreply@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "PyYAML>=6.0",
    "watchdog>=3.0.0,<5.0.0",
    "tomli>=2.0.0; python_version<'3.11'",
    "mcp>=1.0.0,<2.0.0",
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.8.0",
    "isort>=5.13.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.5.0",
    "pre-commit>=3.5.0",
    "pip-licenses>=4.3.0",
    "types-PyYAML>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
xfile_context = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["xfile_context"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselected with 'not slow')",
    "integration: marks tests as integration tests",
    "performance: marks tests as performance tests (T-7.3, etc.)",
]
addopts = "-v --tb=short"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# pytest-xdist parallel execution configuration
# Use: pytest -n 2 --dist=loadfile
# - loadfile ensures all tests in a file run on the same worker
# - This is safe for module-scoped fixtures
# - Using -n 2 for stability (auto can cause timing-sensitive test failures)

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true
